--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "npx serve -s dist"
+    "start": "npx serve -s dist -l $PORT"
   },
   "dependencies": {
     "react": "^19.2.3",
